--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}WDP{% endblock %}</title>
-
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -18,7 +18,7 @@
 
     <!-- top navbar with profile widget -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light rounded px-3 mb-4 shadow-sm">
-        <span class="navbar-brand fw-bold">Wild Dump Prevention Platform</span>
+        <img src="{{ url_for('static', filename='logo_text.png') }}" class="navbar-brand" style="height: 80px; width: auto;" alt="WDP logo"/>
         <div class="ms-auto">
             {% if current_user %}
                 <div class="dropdown">
